compiler/tools/fpp-check/test/interface/duplicate_import.ref.txt
fpp-check
[ local path prefix ]/compiler/tools/fpp-check/test/interface/duplicate_import.fpp:6.5
    import I
    ^
error: duplicate interface I
previous occurrence is here:
[ local path prefix ]/compiler/tools/fpp-check/test/interface/duplicate_import.fpp:5.5
    import I
    ^
